# pressurePoissonSolver

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  Domain.cpp  Domain.h  Doxyfile  Grid.cpp  Grid.h  LinkedVector.h  Makefile  README.md  TriDiagSolver.cpp  TriDiagSolver.h  heat.cpp  two_parts_ss  two_parts_ss.c
apps/: CMakeLists.txt
apps/2d/: CMakeLists.txt  gmg.json  gmg0.json  steady.cpp
apps/2d/config/: boomeramg_example.ini
apps/3d/: CMakeLists.txt  steady.cpp
apps/3d/config/: gmg_example.ini
apps/shared/: CMakeLists.txt  Init.cpp  Init.h  TreeToP4est.cpp  TreeToP4est.h
apps/shared/Writers/: CMakeLists.txt  ClawWriter.cpp  ClawWriter.h  MMWriter.cpp  MMWriter.h  VtkWriter.cpp  VtkWriter.h  VtkWriter2d.cpp  VtkWriter2d.h
domain_decomp/2D-example/: CMakeLists.txt  Domain.cpp  Domain.h  EigenDir.mk  Makefile  README.md  heat.cpp
domain_decomp/2D-petsc-example/: AmgxWrapper.cpp  AmgxWrapper.h  CMakeLists.txt  Domain.h  DomainCollection.cpp  DomainCollection.h  FivePtPatchOperator.h  FourthInterpolator.cpp  FunctionWrapper.h  IMStencilHelper.h  Init.cpp  Init.h  Interpolator.h  MatrixHelper.cpp  MatrixHelper.h  MyTypeDefs.h  PatchOperator.h  PolyChebPrec.cpp  PolyChebPrec.h  QuadInterpolator.cpp  QuadInterpolator.h  SchurHelper.cpp  SchurHelper.h  Side.h  amgx_strong_batch.sh  configure-kestrel.sh  configure-r2.sh  configure.sh  heat.cpp  hypre_strong_batch.sh  kestrel_configure.sh  load.sh  mesh.txt  mueluOptions.xml  petsc_opts.txt  r2_strong_batch.sh  steady  steady.cpp
domain_decomp/2D-petsc-example/PatchSolvers/: CMakeLists.txt  FftwPatchSolver.h
domain_decomp/2D-petsc-example/Writers/: ClawWriter.cpp  ClawWriter.h  MMWriter.h  VtkWriter.h
domain_decomp/2D-trilinos-example/: AmgxWrapper.cpp  AmgxWrapper.h  BelosCGIter.hpp  BelosOutputManager.hpp  BlockJacobiRelaxer.h  CMakeLists.txt  ClawWriter.cpp  ClawWriter.h  CufftSolver.cpp  CufftSolver.h  DDMultiGrid.h  Domain.cpp  Domain.h  DomainCollection.cpp  DomainCollection.h  DomainSignatureCollection.cpp  DomainSignatureCollection.h  Factory.cpp  Factory.h  FftwPatchSolver.cpp  FftwPatchSolver.h  FftwSolver.cpp  FftwSolver.h  FishpackPatchSolver.cpp  FishpackPatchSolver.h  FishpackSolver.cpp  FishpackSolver.h  FivePtPatchOperator.h  FourthInterpolator.cpp  FourthInterpolator.h  FunctionWrapper.h  GenerateLaplacian.h  HypreWrapper.cpp  HypreWrapper.h  Iface.h  Init.cpp  Init.h  Interpolator.h  MMWriter.cpp  MMWriter.h  (+28 more)
domain_decomp/2D-trilinos-example/PatchSolvers/: CMakeLists.txt  FftwPatchSolver.cpp  FftwPatchSolver.h  FishpackPatchSolver.cpp  FishpackPatchSolver.h  PatchSolver.h
domain_decomp/2D-trilinos-example/Writers/: CMakeLists.txt  MMWriter.cpp  MMWriter.h  VtkWriter.cpp  VtkWriter.h
domain_decomp/3D-petsc-example/: AmgxWrapper.h  CMakeLists.txt  ContigFftwSolver.cpp  Domain.h  DomainCollection.cpp  DomainCollection.h  FourthInterpolator.cpp  FunctionWrapper.h  GMGHelper.cpp  GMGHelper.h  GMGSchurHelper.cpp  GMGSchurHelper.h  Iface.h  IfaceType.h  Init.cpp  Init.h  Interpolator.h  MatrixHelper.cpp  OctTree.cpp  OctTree.h  PBMatrix.cpp  PBMatrix.h  PW.h  QuadInterpolator.cpp  SchurDomain.h  SchurHelper.cpp  SchurHelper.h  SevenPtPatchOperator.h  Side.h  StencilHelper.h  TriLinInterp.cpp  TriLinInterp.h  Utils.h  ZoltanHelpers.h  amrplot.m  heat.cpp  mesh_8levels.txt  petsc_opts.txt  run_settings.txt  steady.cpp  (+2 more)
domain_decomp/3dSolver/: BalancedLevelsGenerator.h  BilinearInterpolator.cpp  BufferWriter.h  CMakeLists.txt  ContigFftwSolver.cpp  ContigFftwSolver.h  Domain.h  DomainCollection.cpp  DomainCollection.h  FivePtPatchOperator.h  FunctionWrapper.h  GMGAvgRstr.cpp  GMGAvgRstr.h  GMGDrctIntp.cpp  GMGDrctIntp.h  GMGHelper.cpp  GMGHelper.h  GMGInterpolator.h  GMGRestrictor.h  GMGSchurHelper.cpp  GMGSchurHelper.h  HypreWrapper.cpp  Iface.h  IfaceMatrixHelper.cpp  IfaceType.h  Init.cpp  Init.h  InterLevelComm.cpp  InterLevelComm.h  Interpolator.h  MatrixHelper.cpp  OctNode.h  OctTree.cpp  OctTree.h  PW.h  PatchOperator.h  PolyChebPrec.cpp  PolyChebPrec.h  QuadInterpolator.h  SchurDomain.h  (+20 more)
matlab/: dst4.m  (+10 more)
misc/petsc-muelu-wrapper/: CMakeLists.txt  MueLuWrapper.cpp
src/: AmgxWrapper.cpp  AmgxWrapper.h  BalancedLevelsGenerator.cpp  BalancedLevelsGenerator.h  BiCGStab.h  BilinearInterpolator.cpp  BilinearInterpolator.h  BufferWriter.h  CMakeLists.txt  ContigFftwSolver.cpp  ContigFftwSolver.h  Domain.h  DomainCollection.cpp  DomainCollection.h  DomainCollectionGenerator.h  FivePtPatchOperator.h  FunctionWrapper.h  HypreWrapper.cpp  HypreWrapper.h  Iface.h  IfaceMatrixHelper.cpp  IfaceMatrixHelper.h  InterpCase.h  Interpolator.h  MatrixHelper.cpp  MatrixHelper.h  MatrixHelper2d.cpp  MatrixHelper2d.h  OctNode.h  P4estDCG.cpp  P4estDCG.h  PBMatrix.cpp  PBMatrix.h  PW.h  PatchOperator.h  PetscShellCreator.h  PetscVector.h  PolyChebPrec.cpp  PolyChebPrec.h  QuadInterpolator.cpp  (+26 more)
src/GMG/: AvgRstr.h  CMakeLists.txt  Cycle.cpp  Cycle.h  CycleFactory2d.cpp  CycleFactory2d.h  DrctIntp.h  FFTBlockJacobiSmoother.h  Helper.cpp  Helper.h  Helper2d.cpp  Helper2d.h  InterLevelComm.h  Interpolator.h  Level.h  MatOp.h  Operator.h  Restrictor.h  Smoother.h  TriLinIntp.cpp  TriLinIntp.h  VCycle.h  WCycle.h  WrapOp.h
src/Operators/: DomainWrapOp.h  Operator.h  PetscMatOp.h  SchurDomainOp.h  SchurWrapOp.h
src/PatchSolvers/: DftPatchSolver.cpp  DftPatchSolver.h  FftwPatchSolver.cpp  FftwPatchSolver.h  FishpackPatchSolver.h  PatchSolver.h
src/Thunderegg/: BiCGStab.h  BilinearInterpolator.cpp  BilinearInterpolator.h  BufferWriter.h  Domain.cpp  Domain.h  DomainCollection.h  DomainCollectionGenerator.h  DomainGenerator.h  FivePtPatchOperator.h  Iface.h  IfaceInterp.h  IfaceMatrixHelper.h  IfaceType.h  Interpolator.h  MatrixHelper.cpp  MatrixHelper.h  MatrixHelper2d.cpp  MatrixHelper2d.h  OctNode.h  OctTree.h  P4estDCG.cpp  P4estDCG.h  P4estDomGen.cpp  P4estDomGen.h  PBMatrix.h  PatchInfo.cpp  PatchInfo.h  PatchOperator.h  PetscShellCreator.h  PetscVector.h  PolyChebPrec.cpp  PolyChebPrec.h  QuadInterpolator.h  SchurDomain.h  SchurHelper.cpp  SchurHelper.h  SchurInfo.cpp  SchurInfo.h  SchurMatrixHelper.cpp  (+24 more)
(+318 files in other folders)
